# flask-file-router

./: __init__.py  setup.cfg  setup.py
flask_file_router/: router.py
flask_file_router.egg-info/: PKG-INFO  SOURCES.txt
flask_file_router/flask_file_router.egg-info/: PKG-INFO
src/: router.py
src/flask_file_router.egg-info/: PKG-INFO  SOURCES.txt
