[metadata]
name = package-name
version = 0.0.1
author = Kaushal Prasad Balmiki
author_email = kaushalprasad2611@gmail.com
description = File Based Routing for Flask Server
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    repository = package url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src